Fixed header spacing

--- a/Java site/pages/homepage.css
+++ b/Java site/pages/homepage.css
@@ -4,14 +4,12 @@ h1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-nav {
-    text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
 h2 {
     text-align: center;
     font-family: cursive;
     font-size: 60px;
+    margin-bottom: 20px;
+    margin-top: -40px;
 }
 
 .DurhamEateries{
